# ml-ballistics

./: .flake8  .gitignore  404.html  LICENSE  README.md  html_viewer.py  index.html  mkdocs.yml  notebook.ipynb  pyproject.toml  setup.py  sphere.vtksz
.badges/reports/coverage/: coverage.xml
.badges/reports/flake8/: flake8stats.txt  index.html  src.mlballistics.__init__.report.html  src.mlballistics.__init__.source.html  src.mlballistics.constants.report.html  src.mlballistics.constants.source.html  src.mlballistics.forces.__init__.report.html  src.mlballistics.forces.__init__.source.html  src.mlballistics.forces.base_force.report.html  src.mlballistics.forces.base_force.source.html  src.mlballistics.forces.drag.report.html  src.mlballistics.forces.drag.source.html  src.mlballistics.forces.gravity.report.html  src.mlballistics.forces.gravity.source.html  src.mlballistics.forces.null_force.report.html  src.mlballistics.forces.null_force.source.html  src.mlballistics.objects.__init__.report.html  src.mlballistics.objects.__init__.source.html  (+6 more)
.github/workflows/: ci.yml
docs/: gallery_conf.py  index.md
examples/: README.md  plot_fixed_target.py
mlballistics/: __init__.py  constants.py  utils.py
mlballistics/forces/: __init__.py  base_force.py  null_force.py
mlballistics/objects/: base_object.py
reports/coverage/: coverage.xml
reports/flake8/: index.html
reports/junit/: junit.xml  report.html
search/: search_index.json
src/mlballistics/: __init__.py  constants.py  utils.py
tests/: test_forces.py  test_objects.py  test_simulations.py
(+39 files in other folders)
