[project]
name = "mlballistics"
version = "1.0"
dependencies = [
    "torch",
    "numpy",
    "torchdiffeq",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-html",
]

[tool.setuptools.packages.find]
where = ["src"]