[project]
name = "mlballistics"
version = "1.0"
dependencies = [
    "torch",
    "numpy",
    "torchdiffeq",
    "pyvista",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-html",
    "mkdocs",
    "mkdocs-material",
    "imageio",
    "mkdocs-gallery @ git+https://github.com/Louis-Pujol/mkdocs-gallery.git@latest",
]

[tool.setuptools.packages.find]
where = ["src"]